# zarr_decompressor

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/zarr_decompressor/: __init__.py
zarr_decompressor/: toolkit.py
