[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zarr_decompressor"
version = "0.1.0"
authors = [
  { name="Dougal Ferguson", email="dougal.ferguson@manchester.ac.uk" },
]

description = "A toolkit to decompress custom uint16 Zarr arrays to float32."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["zarr", "decompressor", "hyperspectral", "qcl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

# Project dependencies
dependencies = [
    "numpy",
    "zarr",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/dougalferg/zarr_decompressor"
Issues = "https://github.com/dougalferg/zarr_decompressor/issues"


[tool.setuptools.packages.find]
where = ["src"]
